--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,7 +1,8 @@
 .banner{
-    background-image: url("https://public/Image.png"),
-     liner-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, .5));
-    height: 790px;
+    background-image: url('https://www.master-and-more.eu/fileadmin/user_upload/Music-School.jpg'),
+     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+     /* border: 1px solid red; */
+    height: 780px;
     width: 100%;
     background-blend-mode: overlay;
     background-repeat: no-repeat;
@@ -24,5 +25,5 @@
     outline: none;
     border: none;
     padding: 17px 34px;
-    color: whitesmoke;
+    color: rgb(116, 88, 88);
 }
