--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -21,9 +21,10 @@
 }
 
 .btn-about{
-    background-color: #464040;
+    background-color: #dfd3d3;
     outline: none;
     border: none;
     padding: 17px 34px;
-    color: rgb(116, 88, 88);
+    color: rgb(7, 12, 20);
+    border-radius: 10px;
 }
