--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,3 +4,8 @@
     grid-template-columns: repeat(3,1fr);
     background-color: dimgrey;
 }
+
+#overview{
+    color: #fff;
+    text-decoration: none;
+}
